# ai-powered-fitness-coach

./: README.md  main.py  pyproject.toml  requirements.txt
src/api/: main.py
src/client/: index.py
src/core/: auth.py  database.py  document_processor.py  emeddings.py  load_documents.py  retrieval.py  schemas.py
